// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input basic 1`] = `
<div>
  <label
    class="t-input t--size-m"
  >
    <input
      type="text"
      value=""
    />
  </label>
</div>
`;

exports[`Input basic 2`] = `
<div>
  <label
    class="t-input t--size-m"
  >
    <input
      class="hello"
      type="text"
      value=""
    />
  </label>
</div>
`;

exports[`Input clearable 1`] = `
<div>
  <label
    class="t-input t--size-m t-input--clearable"
  >
    <input
      type="text"
      value=""
    />
  </label>
</div>
`;

exports[`Input loading 1`] = `
<label
  class="t-input t--size-m t-input--loading"
>
  <input
    type="text"
    value=""
  />
  <div
    class="t-input__suffix"
  >
    <i
      class="t-icon t-input__loading"
      role="img"
    >
      <svg
        class="t-loading-icon"
        viewBox="0 0 66 66"
      >
        <circle
          class="t-loading-icon__path"
          cx="33"
          cy="33"
          fill="none"
          r="30"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="6"
        />
      </svg>
    </i>
  </div>
</label>
`;

exports[`Input prefix 1`] = `
<label
  class="t-input t--size-m"
>
  <div
    class="t-input__prefix"
  >
    foo
  </div>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`Input suffix 1`] = `
<label
  class="t-input t--size-m"
>
  <input
    type="text"
    value=""
  />
  <div
    class="t-input__suffix"
  >
    bar
  </div>
</label>
`;
